--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ma
+server.ssl.key-store=keystore.p12
+  server.ssl.key-store-type=PKCS12
+  server.ssl.key-store-password=infodba
+  server.ssl.key-alias=spring
